--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,9 @@ img {
     text-align: left;
 }
 
-.logo div:hover {
+.logo div:hover, .logo div:focus, .logo div:active {
     color: #1A5AFD;
-    transition: 0.2s;
+    transition: 0.3s;
 }
 
 .logo a {
@@ -259,6 +259,8 @@ img {
     color: #ffffff;
     background: #1a5afd;
     text-decoration: underline;
+    
+    transition: background 0.2s, color 0.2s;
 }
 
 #current-page {
@@ -629,7 +631,7 @@ footer p {
 /* START OF PROJECT CASE STUDY */
 
 
-/** LIGHTBOX MARKUP written by Gregory Shier https://codepen.io/gschier/pen/HCoqh **/
+/** LIGHTBOX MARKUP written by Gregory Shier https://codesalad.dev/blog/how-to-create-an-image-lightbox-in-pure-css-25#_
 /** Modified by Siloam Yeung **/
 
 .lightbox {
@@ -736,6 +738,90 @@ footer p {
 
 ul li {
     margin-bottom: 0.5em;
+}
+
+.nextprojectbutton {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-wrap: -webkit-wrap;
+    flex-wrap: -ms-wrap;
+    flex-wrap: wrap;
+
+    flex-direction: row;
+    
+    background: #F5F5F5;
+    border: solid 1px #dbdbdb;
+    border-right: solid 1px rgba(48, 48, 48, 0);
+    margin-top: 2em;
+}
+
+.nextprojectbutton h3 {
+    font-size: 1.5em;
+}
+
+.nextprojectbutton h4 {
+    font-size: 1em;
+}
+
+.nextprojectbutton:active, .nextprojectbutton:hover, .nextprojectbutton:focus {
+    background: #1A5AFD;
+    
+    transition: background 0.5s
+}
+
+.nextprojectbutton:active h2, .nextprojectbutton:hover h2, .nextprojectbutton:focus h2, .nextprojectbutton:active h3, .nextprojectbutton:hover h3, .nextprojectbutton:focus h3, .nextprojectbutton:active h4, .nextprojectbutton:hover h4, .nextprojectbutton:focus h4 {
+    color: #ffffff;
+    opacity: 1;
+    display: block;
+    
+    transition: color 0.2s, opacity 0.2s;
+}
+
+.nextprojectbutton .title {
+    flex: 1 0 25%;
+    
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-wrap: -webkit-wrap;
+    flex-wrap: -ms-wrap;
+    flex-wrap: wrap;
+
+    flex-direction: row;
+    
+    justify-content: space-around;
+    align-items: center;
+    
+    padding: 2.5em;
+}
+
+.nextprojectbutton .title p {
+    font-size: 1.25em;
+    padding: 0;
+    margin: 0;
+}
+
+.nextprojectbutton .project {
+    flex: 3 0 75%;
+    
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-wrap: -webkit-wrap;
+    flex-wrap: -ms-wrap;
+    flex-wrap: wrap;
+
+    flex-direction: column;
+    
+    justify-content: space-around;
+    align-items: baseline;
+    vertical-align: baseline;
+    
+    padding: 2.5em;
 }
 
 /* END OF PROJECT CASE STUDY */
